0.2.1

* Added :force_format option to image_column

* Various Rails 1.2.1 compatibility fixes (mainly in test)

* Added :permissions option to upload_column.

* FIXED #8109 Parallell uploads no longer wipe each other out

============================

0.2

* A freaking huge refactoring of the code, basically ALL of the methods for accessing paths have changed, except for path itself. This was overdue and I apologize if it breaks anything, but I felt that the gain in consistency was worth it. It now works like this:

    path                --the current path of the file (including the filename)
    relative_path       --the current path of the file relative to the root_path option
    
    dir                 --the directory where the file is currently stored
    relative_dir        --like dir but relative to root_path
    
    store_dir           --The directory where files are permanently stored
    relative_store_dir  --the same but relative to root_dir
    
    tmp_dir             --The directory where tempfiles are stored
    relative_tmp_dir    --you can work this out yourself
    
As you can see, this is now actually consistent, with all the relative paths relative to the same directory (err... wow?) and a consistent naming convention.

* In related news: you can now pass a Proc to the :store_dir and :tmp_dir options. The default options are now also procs, instead of being some kind of arcane super-exception like before. The procs will be passed to arguments, first the current model instance and the name of the upload column as the second.

* The :accumulate option was removed from :old_files. I really liked it, but it doesn't make sense with th new Proc-based system (it would wipe out data without thinking, thus potentially getting rid of files you want to keep). Use :keep instead or implement some kind of versioning. The new default is :delete. So beware, if you need to keep those files, make sure to change it!
